# MedViT

./: .gitignore  CustomDataset.md  README.md  evaluate_mnist_ckpt.py  evaluate_pcam_ckpt.py  pyproject.toml  train_all_medmnist.py
CustomDataset/: MedViT.py  datasets.py  download_checkpoint.sh  download_pcam_parallel.sh  engine.py  main.py
test/: evaluate_lc25000_ckpt.py
train/: train_lc25000.py  train_pcam.py
