[project]
name = "medvit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "einops>=0.8.2",
    "fire>=0.7.1",
    "fvcore>=0.1.5.post20221221",
    "gdown>=5.2.1",
    "h5py>=3.16.0",
    "medmnist==3.0.1",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "pillow>=12.1.1",
    "scikit-image>=0.26.0",
    "scikit-learn>=1.8.0",
    "timm==1.0.8",
    "torch>=2.11.0",
    "torchattacks>=3.5.1",
    "torchvision>=0.26.0",
    "tqdm>=4.67.3",
]
